# OpenBB-Tradingagent

./: .gitignore  USER_GUIDE.md  start.command  start.sh
FinClaw/: LICENSE  README.md  pyproject.toml
FinClaw/bridge/src/: index.ts
FinClaw/finclaw/: __init__.py
FinClaw/finclaw/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
FinClaw/finclaw/agent/financial/: __init__.py  economics_router.py  equity_valuation_router.py  meme_router.py  prediction_market_router.py  prompts.py  router.py
FinClaw/finclaw/agent/financial_tools/: __init__.py  akshare_tool.py  earnings_tool.py  economics_data_tool.py  financial_news_tool.py  sec_edgar_tool.py  yfinance_tool.py
FinClaw/finclaw/agent/financial_tools/meme/: meme_create_tool.py  meme_data_tool.py  meme_search_tool.py
FinClaw/finclaw/agent/financial_tools/prediction_market/: prediction_market_tool.py
FinClaw/finclaw/agent/tools/: cron.py  filesystem.py  llm_router.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
FinClaw/finclaw/analytics/: __init__.py
FinClaw/finclaw/analytics/economics/data/: data_handler.py
FinClaw/finclaw/bus/: queue.py
FinClaw/finclaw/channels/: base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
FinClaw/finclaw/cli/: commands.py
FinClaw/finclaw/config/: __init__.py  loader.py  schema.py
FinClaw/finclaw/cron/: service.py
FinClaw/finclaw/providers/: litellm_provider.py  openai_codex_provider.py  registry.py
FinClaw/finclaw/session/: __init__.py  manager.py
FinClaw/finclaw/skills/: README.md
FinClaw/finclaw/skills/earnings/: SKILL.md
FinClaw/finclaw/utils/: __init__.py  helpers.py
TradingAgents/tradingagents/agents/: schemas.py
TradingAgents/tradingagents/graph/: trading_graph.py
backend/: .env.example  ai_analyzer.py  cls_scraper.py  db.py  finclaw_wrapper.py  jin10_scraper.py  main.py  next_data.json  requirements.txt  test_api.py  test_diary.py  test_diary_ai.py  tv_scraper.py  wscn_scraper.py
backend/memory/: trading_memory.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts
frontend/src/features/cls-news/: index.tsx
memory/: trading_memory.md
reports/: 2026-06-05-AAPL.md  2026-06-07-MACRO-daily_review.md  2026-06-07-MACRO-global_assets.md  2026-06-07-MACRO-institutional_commentary.md  2026-06-07-MACRO-risk_quant.md  2026-06-07-MACRO-weekly_flow.md
(+8 files in other folders)
